--- a/docs/monitoring.adoc
+++ b/docs/monitoring.adoc
@@ -292,7 +292,7 @@ Log into Grafana web UI using the following values:
 * Username: `admin`
 * Password: `admin`
 
-*Skip* the Change Password (or change it to something else that you can remember)
+*Skip* the New Password (or change it to something else that you can remember)
 
 You will see the landing page of Grafana as shown:
 
@@ -318,13 +318,17 @@ With our prometheus data source working, let's make a dashboard.
 
 == Create Dashboard
 
-Hover over the `+` button on the left, and select _Create > Dashboard_:
+Select *New Dashboard* to create a new _Dashboard_ to review the metrics.
 
-image::grafcreate.png[create, 600]
+image::grafana-create-dashboard.png[metrics_grafana, 900]
 
 This will create a new dashboard with a single Panel. Each Panel can visualize a computed metric (either a single metric, or a more complex query) and display the results in the Panel.
 
-Click **Add Query**. In the Query box, type `acme` to again get an autocompleted list of available metrics from our app:
+Click on *Add new panel* to add a new panel with a query:
+
+image::grafana-add-query.png[metrics_grafana, 700]
+
+In the Query box, type `acme` to again get an autocompleted list of available metrics from our app:
 
 image::grafquery.png[query,600]
 
@@ -336,11 +340,11 @@ The metrics should immediately begin to show in the graph above:
 
 image::grafgraf.png[graf,800]
 
-Next click on the _Visualization_ tab on the left:
+Next click on the _Visualization_ on the right:
 
 image::grafvis.png[graf,800]
 
-This lets you fine tune the display, along with the type of graph (bar, line, gauge, etc). Leave them for now, and click on the _General_ tab. Change the name of the panel to `Converted Names`.
+This lets you fine tune the display, along with the type of graph (bar, line, gauge, etc). Leave them for now, and click on the _Panel_ tab. Change the name of the panel to `Converted Names`.
 
 image::grafgen.png[graf,800]
 
@@ -354,7 +358,7 @@ Click **Save**.
 
 == Add more Panels
 
-See if you can add additional Panels to your new Dashboard. Use the **Add Panel** button to add a new Panel:
+See if you can add additional Panels to your new Dashboard. Use the **Add new panel** button to add a new Panel:
 
 image::grafmorepanels.png[graf,800]
 
@@ -362,8 +366,8 @@ Follow the same steps as before to create a few more panels, and **don't forget 
 
 Add Panels for:
 
-* The different quantiles of time it takes to process names `application_org_acme_people_stream_NameConverter_converter_seconds` (configure it to _stack_ its values on the _Visualization_ tab, and name it "Converter Performance" on the _General_ tab).
-* The JVM RSS Value `process_resident_memory_bytes` (set the visualization type to `Gauge` and the Field Units to `bytes` on the _Visualization_ tab, and the title to `Memory` on the _General_ tab.
+* The different quantiles of time it takes to process names `application_org_acme_people_stream_NameConverter_converter_seconds` (configure it to _stack_ its values on the _Visualization_ , and name it "Converter Performance" on the _Panel Title_).
+* The JVM RSS Value `process_resident_memory_bytes` (set the visualization type to `Gauge` and the Unit in _Field_ tab to `bytes(IEC)` on the _Visualization_, and the title to `Memory` on the _Panel Title_.
 
 image::grafjvm.png[jvm,500]
 
