--- a/docs/native.adoc
+++ b/docs/native.adoc
@@ -52,7 +52,7 @@ The output of the native build is a native Linux binary, which you can see using
 
 [source,sh,role="copypaste"]
 ----
-readelf -h /tmp/hello/getting-started/target/*-runner
+readelf -h $CHE_PROJECTS_ROOT/quarkus-workshop-labs/target/*-runner
 ----
 
 you’ll see:
@@ -60,7 +60,7 @@ you’ll see:
 [source,none]
 ----
 ELF Header:
-  Magic:   7f 45 4c 46 02 01 01 00 00 00 00 00 00 00 00 00 
+  Magic:   7f 45 4c 46 02 01 01 00 00 00 00 00 00 00 00 00
   Class:                             ELF64
   Data:                              2's complement, little endian
   Version:                           1 (current)
