--- a/docs/cloudnative.adoc
+++ b/docs/cloudnative.adoc
@@ -20,7 +20,7 @@ We'll need to add a https://quarkus.io/extensions[Quarkus Extension^] to enable 
 
 [source, sh, role="copypaste"]
 ----
-mvn quarkus:add-extension -Dextensions="health" -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs
+mvn -q quarkus:add-extension -Dextensions="health" -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs
 ----
 
 You should get:
@@ -28,9 +28,6 @@ You should get:
 [source,console,role="copypaste"]
 ----
 ✅ Adding extension io.quarkus:quarkus-smallrye-health
-[INFO] ------------------------------------------------------------------------
-[INFO] BUILD SUCCESS
-[INFO] ------------------------------------------------------------------------
 ----
 
 This will add the extension below to your `pom.xml`:
@@ -411,7 +408,7 @@ It is also possible to generate an example `application.properties` with _all kn
 
 [source,sh,role=copypaste]
 ----
-mvn quarkus:generate-config -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs
+mvn -q quarkus:generate-config -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs
 ----
 
 This will create a `src/main/resources/application.properties.example` file that contains all the config options exposed via the extensions you currently have installed. These options are commented out, and have their default value when applicable.
