--- a/docs/monitoring.adoc
+++ b/docs/monitoring.adoc
@@ -90,8 +90,19 @@ Like other exercises, we'll need another extension to enable metrics. Install it
 
 [source,sh,role="copypaste"]
 ----
-mvn quarkus:add-extension -Dextensions="metrics" -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs
+mvn -q quarkus:add-extension -Dextensions="metrics" -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs
 ----
+
+[INFO]
+====
+If you previously added this extension in earlier exercises, then you'll see:
+
+[source,console]
+----
+👍 Skipping already present extension io.quarkus:quarkus-smallrye-metrics
+----
+
+====
 
 This will add the necessary entries in your `pom.xml` to bring in the Metrics capability. It will import the `smallrye-metrics` extension which is an implementation of the MicroProfile Metrics specification used in Quarkus.
 
@@ -215,7 +226,7 @@ Run the following command which will build and deploy using the OpenShift extens
 [source,sh,role="copypaste"]
 ----
 mvn clean package -DskipTests -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs && \
-oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite 
+oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite
 ----
 
 == Confirm deployment
@@ -318,7 +329,7 @@ With our prometheus data source working, let's make a dashboard.
 
 == Create Dashboard
 
-Select *New Dashboard* to create a new _Dashboard_ to review the metrics.
+Back on the http://grafana-{{USER_ID}}-project.{{ROUTE_SUBDOMAIN}}[Grafana Home^], select *New Dashboard* to create a new _Dashboard_ to review the metrics.
 
 image::grafana-create-dashboard.png[metrics_grafana, 900]
 
@@ -344,17 +355,13 @@ Next click on the _Visualization_ on the right:
 
 image::grafvis.png[graf,800]
 
-This lets you fine tune the display, along with the type of graph (bar, line, gauge, etc). Leave them for now, and click on the _Panel_ tab. Change the name of the panel to `Converted Names`.
+This lets you fine tune the display, along with the type of graph (bar, line, gauge, etc). Leave them for now, and scroll to the top of the _Panel_ tab. Change the name of the panel to `Converted Names`.
 
 image::grafgen.png[graf,800]
 
-There is an _Alerts_ tab you can configure to send alerts (email, etc) when conditions are met for this and other queries. We'll skip this for now.
-
-Click the _Save_ icon at the top to save our new dashboard, enter `Quarkus Metrics Dashboard` as its name (you can actually name it any name you want, it will show up in a list of dashboards later on).
+Click the **Save** icon at the top to save our new dashboard, enter `Quarkus Metrics Dashboard` as its name (you can actually name it any name you want, it will show up in a list of dashboards later on).
 
 image::grafdashsave.png[graf,800]
-
-Click **Save**.
 
 == Add more Panels
 
@@ -366,7 +373,7 @@ Follow the same steps as before to create a few more panels, and **don't forget 
 
 Add Panels for:
 
-* The different quantiles of time it takes to process names `application_org_acme_people_stream_NameConverter_converter_seconds` (Toggle _Stack_ on the _Display_ , and name it `Converter Performance` on the _Panel Title_).
+* The different quantiles of time it takes to process names `application_org_acme_people_stream_NameConverter_converter_seconds` (Turn on _Stack_ in the _Display_ section of the _Panel_ tab , and name it `Converter Performance` for the _Panel Title_).
 * The JVM RSS Value `process_resident_memory_bytes` (set the visualization type to `Gauge` and the Unit in _Field_ tab to `bytes(IEC)` on the _Visualization_, and the title to `Memory` on the _Panel Title_.
 
 image::grafjvm.png[jvm,500]
