--- a/docs/openapi.adoc
+++ b/docs/openapi.adoc
@@ -19,7 +19,14 @@ We need to add another extension for OpenAPI. Run the following command:
 
 [source,sh,role="copypaste"]
 ----
-mvn quarkus:add-extension -Dextensions="openapi" -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs
+mvn -q quarkus:add-extension -Dextensions="openapi" -f $CHE_PROJECTS_ROOT/quarkus-workshop-labs
+----
+
+You should see:
+
+[source,console]
+----
+✅ Adding extension io.quarkus:quarkus-smallrye-openapi
 ----
 
 This will add the necessary extension for using OpenAPI, and a graphical frontend extension called *Swagger* which we'll discuss later. It also enables a new RESTful endpoint in the app accessible at `/openapi`.
@@ -56,8 +63,6 @@ paths:
           description: OK
           content:
             application/json:
-              schema:
-                $ref: '#/components/schemas/ListPerson'
 # ... and the rest of your endpoints
 ----
 
